add load balancer skeleton code

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,8 +1,11 @@
-TARGETS = frontend
+TARGETS = frontend lb
 
 all: $(TARGETS)
 
 frontend: frontend.cc request.cc response.cc utils.cc store.cc
+	g++ $^ -lpthread -o $@
+
+lb: load_balancer.cc utils.cc
 	g++ $^ -lpthread -o $@
 
 clean::
