master backend commucation

--- a/master/Makefile
+++ b/master/Makefile
@@ -2,7 +2,7 @@ TARGETS = master
 
 all: $(TARGETS)
 
-master: master.cc conhash.cc
+master: master.cc conhash.cc ../frontend/utils.cc
 	g++ $^ -lpthread -o $@
 
 clean::
