--- a/webmail/Makefile
+++ b/webmail/Makefile
@@ -8,10 +8,10 @@ all: $(TARGETS)
 webmail_client: webmail_client.cc client_def.o
 	g++ $^ -lpthread -g -o $@
 
-webmail_server: webmail_server.cc 
-	g++ $< -I/opt/local/include/ -L/opt/local/bin/openssl -lcrypto -lresolv -lpthread -g -o $@
+webmail_server: webmail_server.cc server_def.o
+	g++ $^ -I/opt/local/include/ -L/opt/local/bin/openssl -lcrypto -lresolv -lpthread -g -o $@
 	
-webmail_deliver: webmail_deliver.cc client_def.o
+webmail_deliver: webmail_deliver.cc server_def.o
 	g++ $^ -I/opt/local/include/ -L/opt/local/bin/openssl -lcrypto -lresolv -lpthread -g -o $@
 	
 clean::
