add send email feature

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -2,8 +2,8 @@ TARGETS = frontend lb
 
 all: $(TARGETS)
 
-frontend: frontend.cc request.cc response.cc utils.cc store.cc ../webmail/server_def.cc
-	g++ $^ -lpthread -o $@
+frontend: frontend.cc request.cc response.cc utils.cc store.cc ../webmail/webmail_utils.cc
+	g++ $^ -I/opt/local/include/ -L/opt/local/bin/openssl -lcrypto -lresolv -lpthread -o $@
 
 lb: load_balancer.cc utils.cc
 	g++ $^ -lpthread -o $@
