--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,4 +1,4 @@
-TARGETS = frontend lb admin
+TARGETS = frontend lb
 
 all: $(TARGETS)
 
@@ -6,9 +6,6 @@ frontend: frontend.cc request.cc response.cc utils.cc store.cc ../webmail/webmai
 	g++ $^ -I/opt/local/include/ -L/opt/local/bin/openssl -lcrypto -lresolv -lpthread -o $@
 
 lb: load_balancer.cc utils.cc
-	g++ $^ -lpthread -o $@
-
-admin: admin_console.cc utils.cc
 	g++ $^ -lpthread -o $@
 
 clean::
